# sadhguru-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
specs/001-daily-quote/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-daily-quote/checklists/: requirements.md
specs/001-daily-quote/contracts/: mcp-resources.md
src/sadhguru_mcp_server/: __main__.py  cache.py  scraper.py  server.py
tests/: conftest.py
tests/contract/: test_daily_quote_resource.py
tests/unit/: test_cache.py  test_scraper.py
