[project]
name = "sadhguru-mcp-server"
version = "0.1.0"
description = "An MCP server that serves Sadhguru's daily quotes"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
]

[project.scripts]
sadhguru-mcp-server = "sadhguru_mcp_server.server:mcp.run"

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sadhguru_mcp_server"]
